roles/iptables/tasks/rules.v4
# Generated by iptables-save v1.6.0 on Sun Sep 29 12:38:09 2019
*nat
:PREROUTING ACCEPT [39:3399]
:INPUT ACCEPT [10:963]
:OUTPUT ACCEPT [151:10762]
:POSTROUTING ACCEPT [148:10392]
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Sun Sep 29 12:38:09 2019
# Generated by iptables-save v1.6.0 on Sun Sep 29 12:38:09 2019
*filter
:INPUT ACCEPT [664:69621]
:FORWARD ACCEPT [42:3528]
:OUTPUT ACCEPT [655:64992]
-A INPUT -s 192.168.3.0/24 -d 192.168.2.0/24 -j DROP
-A INPUT -s 192.168.2.0/24 -d 192.168.3.0/24 -j DROP
-A INPUT -s 192.168.3.0/24 -d 192.168.4.0/24 -j DROP
-A INPUT -s 192.168.4.0/24 -d 192.168.3.0/24 -j DROP
-A INPUT -s 192.168.2.0/24 -d 192.168.4.0/24 -j DROP
-A INPUT -s 192.168.4.0/24 -d 192.168.2.0/24 -j DROP
-A INPUT -s 192.168.5.0/24 -d 192.168.2.0/24 -j DROP
-A INPUT -s 192.168.2.0/24 -d 192.168.5.0/24 -j DROP
-A INPUT -s 192.168.5.0/24 -d 192.168.3.0/24 -j DROP
-A INPUT -s 192.168.3.0/24 -d 192.168.5.0/24 -j DROP
-A INPUT -s 192.168.5.0/24 -d 192.168.4.0/24 -j DROP
-A INPUT -s 192.168.4.0/24 -d 192.168.5.0/24 -j DROP
-A INPUT -s 192.168.6.0/24 -d 192.168.2.0/24 -j DROP
-A INPUT -s 192.168.2.0/24 -d 192.168.6.0/24 -j DROP
-A INPUT -s 192.168.6.0/24 -d 192.168.3.0/24 -j DROP
-A INPUT -s 192.168.3.0/24 -d 192.168.6.0/24 -j DROP
-A INPUT -s 192.168.6.0/24 -d 192.168.4.0/24 -j DROP
-A INPUT -s 192.168.4.0/24 -d 192.168.6.0/24 -j DROP
-A INPUT -s 192.168.6.0/24 -d 192.168.5.0/24 -j DROP
-A INPUT -s 192.168.5.0/24 -d 192.168.6.0/24 -j DROP
-A FORWARD -s 192.168.3.0/24 -d 192.168.2.0/24 -j DROP
-A FORWARD -s 192.168.2.0/24 -d 192.168.3.0/24 -j DROP
-A FORWARD -s 192.168.3.0/24 -d 192.168.4.0/24 -j DROP
-A FORWARD -s 192.168.4.0/24 -d 192.168.3.0/24 -j DROP
-A FORWARD -s 192.168.2.0/24 -d 192.168.4.0/24 -j DROP
-A FORWARD -s 192.168.4.0/24 -d 192.168.2.0/24 -j DROP
-A FORWARD -s 192.168.5.0/24 -d 192.168.2.0/24 -j DROP
-A FORWARD -s 192.168.2.0/24 -d 192.168.5.0/24 -j DROP
-A FORWARD -s 192.168.5.0/24 -d 192.168.3.0/24 -j DROP
-A FORWARD -s 192.168.3.0/24 -d 192.168.5.0/24 -j DROP
-A FORWARD -s 192.168.5.0/24 -d 192.168.4.0/24 -j DROP
-A FORWARD -s 192.168.4.0/24 -d 192.168.5.0/24 -j DROP
-A FORWARD -s 192.168.6.0/24 -d 192.168.2.0/24 -j DROP
-A FORWARD -s 192.168.2.0/24 -d 192.168.6.0/24 -j DROP
-A FORWARD -s 192.168.6.0/24 -d 192.168.3.0/24 -j DROP
-A FORWARD -s 192.168.3.0/24 -d 192.168.6.0/24 -j DROP
-A FORWARD -s 192.168.6.0/24 -d 192.168.4.0/24 -j DROP
-A FORWARD -s 192.168.4.0/24 -d 192.168.6.0/24 -j DROP
-A FORWARD -s 192.168.6.0/24 -d 192.168.5.0/24 -j DROP
-A FORWARD -s 192.168.5.0/24 -d 192.168.6.0/24 -j DROP
-A OUTPUT -s 192.168.3.0/24 -d 192.168.2.0/24 -j DROP
-A OUTPUT -s 192.168.2.0/24 -d 192.168.3.0/24 -j DROP
-A OUTPUT -s 192.168.3.0/24 -d 192.168.4.0/24 -j DROP
-A OUTPUT -s 192.168.4.0/24 -d 192.168.3.0/24 -j DROP
-A OUTPUT -s 192.168.2.0/24 -d 192.168.4.0/24 -j DROP
-A OUTPUT -s 192.168.4.0/24 -d 192.168.2.0/24 -j DROP
-A OUTPUT -s 192.168.5.0/24 -d 192.168.2.0/24 -j DROP
-A OUTPUT -s 192.168.2.0/24 -d 192.168.5.0/24 -j DROP
-A OUTPUT -s 192.168.5.0/24 -d 192.168.3.0/24 -j DROP
-A OUTPUT -s 192.168.3.0/24 -d 192.168.5.0/24 -j DROP
-A OUTPUT -s 192.168.5.0/24 -d 192.168.4.0/24 -j DROP
-A OUTPUT -s 192.168.4.0/24 -d 192.168.5.0/24 -j DROP
-A OUTPUT -s 192.168.6.0/24 -d 192.168.2.0/24 -j DROP
-A OUTPUT -s 192.168.2.0/24 -d 192.168.6.0/24 -j DROP
-A OUTPUT -s 192.168.6.0/24 -d 192.168.3.0/24 -j DROP
-A OUTPUT -s 192.168.3.0/24 -d 192.168.6.0/24 -j DROP
-A OUTPUT -s 192.168.6.0/24 -d 192.168.4.0/24 -j DROP
-A OUTPUT -s 192.168.4.0/24 -d 192.168.6.0/24 -j DROP
-A OUTPUT -s 192.168.6.0/24 -d 192.168.5.0/24 -j DROP
-A OUTPUT -s 192.168.5.0/24 -d 192.168.6.0/24 -j DROP
COMMIT
# Completed on Sun Sep 29 12:38:09 2019
# Generated by iptables-save v1.6.0 on Sun Sep 29 12:38:09 2019
*mangle
:PREROUTING ACCEPT [1458:177907]
:INPUT ACCEPT [1376:171075]
:FORWARD ACCEPT [82:6832]
:OUTPUT ACCEPT [1393:141909]
:POSTROUTING ACCEPT [1471:146055]
COMMIT
# Completed on Sun Sep 29 12:38:09 2019
